--- a/source/less/example.less
+++ b/source/less/example.less
@@ -86,7 +86,7 @@
   .example {
     padding: 40px 0 70px;
     background-color: #ffffff;
-    background-image: linear-gradient(to bottom, #ffffff 0%, #ffffff 58%, #eaeaea 58%, #eaeaea 100%);
+    background-image: linear-gradient(to bottom, #ffffff 0%, #ffffff 57%, #eaeaea 57%, #eaeaea 100%);
   }
 
   .example__wrapper {
@@ -102,6 +102,7 @@
   }
 
   .example__description {
+    width: 700px;
     margin-bottom: 55px;
   }
 
@@ -146,7 +147,7 @@
 
 @media (min-width: @desktop-screen) {
   .example {
-    padding-top: 10px;
+    padding-top: 0;
     padding-bottom: 20px;
     background-image: linear-gradient(to bottom, #ffffff 0%, #ffffff 33%, #eaeaea 33%, #eaeaea 100%);
   }
@@ -165,7 +166,7 @@
   }
 
   .example__title {
-    padding-top: 70px;
+    padding-top: 20px;
     margin-bottom: 150px;
   }
 
