--- a/source/less/usage.less
+++ b/source/less/usage.less
@@ -137,6 +137,7 @@
 @media (min-width: @desktop-screen) {
   .usage {
     margin-bottom: 0;
+    padding-bottom: 0;
     border-bottom: none;
   }
 
@@ -145,7 +146,7 @@
   }
 
   .usage__list {
-    min-height: auto;
+    min-height: 230px;
     margin: 0;
   }
 
