--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -3,22 +3,6 @@
   z-index: 1;
   line-height: 20px;
 
-  &::before {
-    content: "";
-    position: absolute;
-    right: 50%;
-    bottom: 170px;
-    z-index: 5;
-    width: 55px;
-    height: 53px;
-    background-color: transparent;
-    background-image: url("../img/map-pin.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    transform: translateX(50%);
-  }
-
   &--grey {
     background-color: @secondary-color;
   }
@@ -57,6 +41,7 @@
   display: block;
   width: 100%;
   height: 363px;
+  border: none;
 }
 
 
@@ -89,7 +74,7 @@
 
   .contacts__map {
     width: 100%;
-    height: auto;
+    height: 390px;
   }
 }
 
