--- a/source/less/nutrition-programs.less
+++ b/source/less/nutrition-programs.less
@@ -211,6 +211,7 @@
   .nutrition-programs__list {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     width: 100%;
     margin-bottom: 40px;
   }
