--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -48,13 +48,32 @@
   width: 280px;
   height: 271px;
   margin-top: -139px;
-  margin-bottom: 3px;
 }
 
 .promo__btn {
   width: 280px;
+  display: block;
+  padding: 11px;
+  border: none;
+  font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
+  text-align: center;
+  color: @secondary-text-color;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: @main-color;
+  box-sizing: border-box;
+
+  &:hover,
+  &:focus {
+    background-color: @main-color-hover;
+  }
+
+  &:active {
+    background-color: @main-color-hover;
+    color: rgba(@secondary-text-color, 0.3);
+  }
 }
 //планшет
 @media (min-width: @tablet-screen) {
@@ -96,7 +115,7 @@
   }
 
   .promo__intro {
-    margin-bottom: 45px;
+    margin-bottom: 48px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -106,7 +125,10 @@
   }
 
   .promo__btn {
-    width: 250px;
+    width: 247px;
+    padding: 15px;
+    font-size: 20px;
+    line-height: 20px;
   }
 }
 //десктоп
