Изменены отступы в блоке -Подбор программы-

--- a/source/less/program-selection.less
+++ b/source/less/program-selection.less
@@ -309,7 +309,7 @@ input[type="checkbox"]:checked ~ .program-selection__checkbox::after {
   }
 
   .program-selection__text-field {
-    padding: 15px;
+    padding: 15px 20px;
     padding-right: 50px;
   }
 
@@ -376,6 +376,10 @@ input[type="checkbox"]:checked ~ .program-selection__checkbox::after {
     margin: 0 auto;
     margin-bottom: 20px;
     padding: 0;
+  }
+
+  .program-selection__input-label svg {
+    right: 15px;
   }
 
   .program-selection__comment {
