--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,16 +20,18 @@
 //шрифты
 @font-face {
   font-family: "Oswald-reg";
-  src: url("../fonts/oswaldregular.woff"),
-    url("../fonts/oswaldregular.woff2");
+  src: url("../fonts/oswaldregular.woff2"),
+    url("../fonts/oswaldregular.woff");
   font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Oswald-med";
-  src: url("../fonts/oswaldmedium.woff"),
-    url("../fonts/oswaldmedium.woff2");
+  src: url("../fonts/oswaldmedium.woff2"),
+    url("../fonts/oswaldmedium.woff");
   font-weight: medium;
+  font-display: swap;
 }
 
 body {
