Добавлен z-index для ссылки с логотипом в шапке

--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -18,6 +18,10 @@
   border-bottom: 1px solid #e6e6e6;
 }
 
+.page-header__logo {
+  z-index: 5;
+}
+
 .page-header__logo[href]:hover img,
 .page-header__logo[href]:focus img {
   opacity: 0.8;
