Шрифтам добавлен соответствующий формат

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,16 +20,16 @@
 //шрифты
 @font-face {
   font-family: "Oswald-reg";
-  src: url("../fonts/oswaldregular.woff2"),
-    url("../fonts/oswaldregular.woff");
+  src: url("../fonts/oswaldregular.woff2") format(woff2),
+    url("../fonts/oswaldregular.woff") format(woff2);
   font-weight: 400;
   font-display: swap;
 }
 
 @font-face {
   font-family: "Oswald-med";
-  src: url("../fonts/oswaldmedium.woff2"),
-    url("../fonts/oswaldmedium.woff");
+  src: url("../fonts/oswaldmedium.woff2") format(woff2),
+    url("../fonts/oswaldmedium.woff") format(woff);
   font-weight: medium;
   font-display: swap;
 }
