Файлы стилей для блоков перемещены в папку less/blocks

--- a/source/less/blocks/program-selection.less
+++ b/source/less/blocks/program-selection.less
@@ -61,14 +61,15 @@
 
 .program-selection__required-field {
   position: relative;
-  top: -2px;
+  top: -5px;
 }
 
 .program-selection__text-field {
   flex-grow: 1;
+  width: 122px;
+  height: 46px;
   margin-left: 15px;
-  padding: 13px 15px 12px;
-  padding-right: 33px;
+  padding: 13px 33px 12px 15px;
   border: 1px solid rgba(205, 205, 205, 0.5);
   background-color: #ffffff;
   font: inherit;
@@ -230,7 +231,7 @@ input[type="checkbox"]:hover ~ .program-selection__checkbox {
 }
 
 .program-selection__owner-data .program-selection__fieldset-title {
-  width: 181px;
+  width: 221px;
 }
 
 .program-selection__checkbox {
@@ -312,6 +313,7 @@ input[type="checkbox"]:checked ~ .program-selection__checkbox::after {
   }
 
   .program-selection__text-field {
+    height: 52px;
     padding: 15px 20px;
     padding-right: 50px;
   }
@@ -467,6 +469,7 @@ input[type="checkbox"]:checked ~ .program-selection__checkbox::after {
 
   .program-selection__program-type {
     width: 570px;
+    min-height: 198px;
     margin: 0;
     margin-bottom: 55px;
     padding-top: 35px;
