--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,27 +1,28 @@
+@import "normalize.less";
 @import "variables.less";
-@import "page-header.less";
-@import "menu.less";
-@import "burger-btn.less";
+@import "blocks/page-header.less";
+@import "blocks/menu.less";
+@import "blocks/burger-btn.less";
 @import "visually-hidden.less";
-@import "promo.less";
-@import "btn.less";
-@import "nutrition-programs.less";
-@import "usage.less";
-@import "section-title.less";
-@import "example.less";
-@import "slider.less";
-@import "contacts.less";
-@import "page-footer.less";
-@import "catalog.less";
-@import "extra-goods.less";
-@import "stock.less";
-@import "program-selection.less";
+@import "blocks/promo.less";
+@import "blocks/btn.less";
+@import "blocks/nutrition-programs.less";
+@import "blocks/usage.less";
+@import "blocks/section-title.less";
+@import "blocks/example.less";
+@import "blocks/slider.less";
+@import "blocks/contacts.less";
+@import "blocks/page-footer.less";
+@import "blocks/catalog.less";
+@import "blocks/extra-goods.less";
+@import "blocks/stock.less";
+@import "blocks/program-selection.less";
 
 //шрифты
 @font-face {
   font-family: "Oswald-reg";
   src: url("../fonts/oswaldregular.woff2") format("woff2"),
-    url("../fonts/oswaldregular.woff") format("woff2");
+    url("../fonts/oswaldregular.woff") format("woff");
   font-weight: 400;
   font-display: swap;
 }
